@@ -10,9 +10,11 @@ pkgbase = mcpatcher
 	optdepends = minecraft: the game itself
 	noextract = mcpatcher-2.4.5_03.jar
 	source = https://bitbucket.org/prupe/mcpatcher/downloads/mcpatcher-2.4.5_03.jar
-	source = https://bitbucket.org/Freso/pkgbuilds/downloads/mcpatcher-archlinux.tar.bz2
+	source = mcpatcher
+	source = mcpatcher.desktop
 	md5sums = d5b33a8cf4896beef40013d778b614b2
-	md5sums = f30f4f8a8f5a0f83e761c8f32a743692
+	md5sums = 38358254be76dc84676509f43be44938
+	md5sums = 87f031f8f0fceb0feb369c6185e07fbf
 
 pkgname = mcpatcher
 
