@@ -13,9 +13,11 @@ optdepends=('minecraft: the game itself')
 noextract=("$pkgname-$pkgver.jar")
 changelog=ChangeLog
 source=(https://bitbucket.org/prupe/mcpatcher/downloads/$pkgname-$pkgver.jar
-        https://bitbucket.org/Freso/pkgbuilds/downloads/$pkgname-archlinux.tar.bz2)
+        mcpatcher
+        mcpatcher.desktop)
 md5sums=('d5b33a8cf4896beef40013d778b614b2'
-         'f30f4f8a8f5a0f83e761c8f32a743692')
+         '38358254be76dc84676509f43be44938'
+         '87f031f8f0fceb0feb369c6185e07fbf')
 
 build() {
     cd "$srcdir"
